--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/reactPage/addproduct.css">
+  <link rel="preload" href="/assets/DizzyDesign.png" as="image">
   <title>React Page</title>
 </head>
 <body>
